# 1.00.04 (63704) Apr 24, 2012
4/24/12 Publishing to dev for use in interviews.
4/24/12 Beers: changed the units shown in the concentration tab.  Was, for example mM, now is mmol/L.
3/29/12 generalize and migrate ToggleButtonNode and MomentaryButtonNode to piccolo-phet
3/22/12 restore flavors in build.properties
# 1.00.03 (62761) Mar 22, 2012
3/22/12 dev version for KL that contains only Beer's Law Lab in *_all.jar
3/22/12 temporarily comment out all flavors except Beers in build.properties
3/20/12 Beers: restore Wavelength control
# 1.00.02 (62641) Mar 20, 2012
3/20/12 interview version with Wavelength control hidden
3/20/12 Beers: temporarily hide Wavelength control for interviews
# 1.00.01 (62562) Mar 15, 2012
3/15/12 2nd tab is feature complete
3/13/12 Beers: support for up/down arrows in Concentration text field
3/12/12 #3276, #3277 changes to WavelengthControl
3/12/12 Beers: simplify Beam model and view to a single rectangle, instead of 3 segments [62487]
3/10/12 add molar absorptivity data for Drink Mix
3/9/12 increase cuvette height to 3cm, move cuvette down an additional 0.15cm
# 1.00.00 (62368) Mar 9, 2012
3/9/12 Concentration 1.00 release
3/8/12 fill more of the cuvette with solution (92% vs 85%)
3/8/12 Beers: change KMnO4 color chip to match first tab, RGB=[80,0,120]
3/8/12 try making top of cuvette look open
3/8/12 double width of cuvette stroke (1.5 to 3)
# 0.00.19 (62349) Mar 8, 2012
3/8/12 Beers: first dev version that uses experimental data to map wavelength to molar aborptivity
3/8/12 remove duplicate stroking of light beam
3/8/12 hook up experimental data to absorbance model
3/8/12 clean up concentration value view transform
3/8/12 add JC's experimental data to lookup tables for mapping wavelength to molar absorptivity
# 0.00.18 (62340) Mar 8, 2012
3/8/12 Concentration 1.00 release candidate
3/8/12 change "lambdaMax" label to "fixed" on wavelength radio button